4.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development


# kubectl  config set-context $(kubectl config current-context) --namespace=dev
