12.taintstolerations.yaml

apiVersion: v1
kind: Pod
metadata: 
  name: myapplication11
spec:
  containers:
    - name: nginx
      image: nginx
  tolerations:
    - key: "app"
      operator: "Equal"
      value: "red"
      effect: "NoSchedule"


# tainting    #  
# kubectl taint node shashank-1-2 app:blue:NoSchedule
