14.nodeaffinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapplication122
spec:
  containers:
    - name: nginx
      image: nginx
      resources:
            requests:
              memory: "1Gi"
              cpu: 1
            limits:
              memory: "2Gi"
              cpu: 2
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: size
                operator: In
                values:
                  - Large

# requiredDuringSchedulingIgnoredDuringExecution:
# requiredDuringSchedulingRequiredDuringExecution:
# preferredDuringSchedulingIgnoredDuringExecution:
