5.environment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    myapp: mypod
spec:
  containers:
    - name: mypod
      image: redis
