21.service.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mynewapplication2z
  labels:
    app: myapp
    type: front-end
spec:
  containers:
    - name: mynewapplication2z
      image: nginx

---
apiVersion: v1
kind: Service 
metadata:
  name: myapp-service
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30008
  selector:
    app: myapp
    type: front-end
